various placement fixes

--- a/index.html
+++ b/index.html
@@ -1,105 +1,19 @@
 <!DOCTYPE html>
-
-<script>
-    var book = {
-        title: 'A Simple Story',
-        author: 'Richard',
-        pages: [
-            {
-                name: 'COVER',
-                text: 'You are standing inside a room.',
-                actions: [
-                    {
-                        text: 'open the door',
-                        page: '1'
-                    },
-                    {
-                        text: 'close the door',
-                        page: '2'
-                    }
-                ]
-            },
-            {
-                name: '1',
-                text: 'You walk outside, an the planet explodes. Better luck next time.<br>' +
-                        '<br><center><img src="images/octupus.png" width="90%"></center><br><br>' +
-                        '<center>THE END</center>',
-                actions: [
-                    {
-                        text: 'Read again.',
-                        page: 'COVER'
-                    }
-                ]
-            },
-            {
-                name: '2',
-                text: 'You sit lathargically at your computer till you die. The End.',
-                actions: [
-                    {
-                        text: 'Read again.',
-                        page: 'COVER'
-                    }
-                ]
-            }
-        ]
-    };
-</script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- YOU CAN IGNORE WHATS BELOW HERE -->
+<!-- YOU SHOULD BE LOOKING AT book.js -->
 <html>
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title></title>
     <link rel="stylesheet" href="code/jquery.mobile-1.0.1.min.css"/>
+    <link rel="stylesheet" href="code/socialadventurestory.css"/>
     <script src="code/jquery-1.7.1.min.js"></script>
     <script src="code/jquery.mobile-1.0.1.min.js"></script>
+    <script src="book.js"></script>
     <script src="code/socialadventurestory.js"></script>
-    <style>
-        html body {
-            background-color: black;
-        }
-
-        .pageStats {
-            font-style: italic;
-            color: #999;
-        }
-
-        .pageAuthor {
-            color: #999;
-        }
-    </style>
 </head>
 <body></body>
 <script>
     SocialAdventureStory.createBook(book);
 </script>
-</body>
 </html>
